Fix part of vulnerabilities, fix deprecated sass global functions, moved from grunt-sass to grunt-contrib-sass

--- a/package.json
+++ b/package.json
@@ -51,9 +51,9 @@
     "grunt-contrib-connect": "^5.0.0",
     "grunt-contrib-cssmin": "^5.0.0",
     "grunt-contrib-jasmine": "^4.0.0",
+    "grunt-contrib-sass": "^2.0.0",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-replace": "^2.0.2",
-    "grunt-sass": "^4.0.0",
     "grunt-shell": "^4.0.0",
     "jasmine-jquery": "^2.1.1",
     "jest": "^29.7.0",
