--- a/package.json
+++ b/package.json
@@ -51,9 +51,9 @@
     "grunt-contrib-connect": "^5.0.0",
     "grunt-contrib-cssmin": "^5.0.0",
     "grunt-contrib-jasmine": "^4.0.0",
+    "grunt-contrib-sass": "^2.0.0",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-replace": "^2.0.2",
-    "grunt-sass": "^3.0.0",
     "grunt-shell": "^4.0.0",
     "jasmine-jquery": "^2.1.1",
     "jest": "^29.7.0",
@@ -63,7 +63,7 @@
     "prettier": "^3.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "sass": "^1.74.1",
+    "sass": "^1.83.1",
     "sharp": "^0.33.5",
     "time-grunt": "^2.0.0",
     "typescript": "^5.5.3",
